# live-meeting-helper

./: .gitignore  CLAUDE.md  README.md  build-windows.bat  build.sh  dev-build-windows.bat  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: AUDIO_CAPTURE.md  RELEASING.md
src/: index.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  config.rs  document.rs  lib.rs  main.rs  paths.rs  types.rs
src-tauri/src/audio/: capture.rs  loopback_mac.rs  loopback_mac.swift  loopback_win.rs  mod.rs
src-tauri/src/notes/: corrections.rs  generator.rs  mod.rs  prompts.rs  spawn_mac.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/profile/: mod.rs
src-tauri/src/session/: manager.rs  mod.rs
src-tauri/src/transcription/: mod.rs  service.rs  whisper_service.rs
src/css/: style.css
src/js/: app.js
