[package]
name = "live-meeting-helper"
version = "0.2.0"
edition = "2021"

[features]
default = ["app", "whisper"]
app = ["tauri", "tauri-plugin-shell", "cpal", "aws-config", "aws-sdk-transcribestreaming", "futures-core"]
# Local Whisper transcription (requires cmake + C++ compiler to build whisper.cpp)
whisper = ["dep:whisper-rs"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
cpal = { version = "0.15", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-transcribestreaming = { version = "1", optional = true }
dirs = "6.0.0"
futures-core = { version = "0.3.32", optional = true }
futures-util = "0.3"
pdf-extract = "0.7"
docx-rs = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
whisper-rs = { version = "0.16", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 0
debug = "limited"        # Smaller PDB — big win on Windows link times
incremental = true
split-debuginfo = "unpacked"  # Avoids huge single PDB file

[profile.dev.package."*"]
opt-level = 1            # Slightly optimize deps (they rarely change, cached after first build)
